<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Buddy</string>
    <string name="action_settings">Help</string>
    <string name="search_hint">Search for a Study Spot</string>
    <string name="search">Search</string>
    <string name="title_activity_display_search_results">Search Results</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tutor_question">Tutors?</string>
    <string name="s_quest">Search for a Study Spot:</string>
    <string name="other_quest">-----------------------------------------------------------\n\nOr find the best Study Spots:\n</string>
    <string name="best_button">Find Best Study Spots</string>
    <string name="title_activity_display_best_results">DisplayBestResults</string>
    <string name="study_prefs">Enter Study Spot Preferences</string>
    <string name="title_activity_study_preferences">Study Preferences</string>
    <string name="searchProgress">Search Progress</string>
    <string name="cardinal_quest">North or South of Green Street?</string>
    <string name="ews_quest">EWS?</string>
    <string name="needs">Do you need....</string>
    <string name="title_activity_help">Help</string>
    <string name="help_text">Welcome to Study Buddy!\n\nThis app is designed to help you find the best locations for studying on campus at UIUC. You may search for a spot by name or enter your personal study preferences and have Studdy Buddy find the best spots for you!\nStudy Buddy will then provide you with a list of study spots which match your search criteria. It will also display the closest food location to your spot and the closest coffee shop, as well as whether these places are open or closed.\n\nWe hope you enjoy the app, and happy studying!</string>

</resources>