<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
	android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity"
	android:orientation="vertical">

	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/s_quest" android:textSize="20dp">
	</TextView>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity"
		android:orientation="horizontal">
		<EditText android:id="@+id/search_edit_text"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:hint="@string/search_hint" android:inputType="text" />
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/search"
			android:onClick="sendSearch" />
	</LinearLayout>

	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/other_quest" android:textSize="20dp">
	</TextView>

	<Button android:text="@string/study_prefs" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:onClick="onPrefsButtonClick"></Button>



	<Button xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/best_button" android:onClick="findBest">
	</Button></LinearLayout>